feat: darkmode toggle, enhanced lazy loading

--- a/webapp/front/front/src/app/app.component.html
+++ b/webapp/front/front/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-confirmation-dialog></app-confirmation-dialog>
 
 <app-background-clouds></app-background-clouds>
+<app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
