--- a/webapp/front/front/src/app/features/feed/feed-page/feed-page.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-page/feed-page.component.html
@@ -1,47 +1,41 @@
-<div class="body">
-  <app-navbar></app-navbar>
+<div class="container">
+  <div class="row init">
+    <div class="column-left">
+      <app-sidebar></app-sidebar>
+    </div>
 
-  <div class="container">
-    <div class="row init">
-      <div class="column-left">
-        <app-sidebar></app-sidebar>
-      </div>
+    <div class="column-middle">
+      <app-feed-control-bar></app-feed-control-bar>
 
-      <div class="column-middle">
-        <app-feed-control-bar></app-feed-control-bar>
-
-        <div id="placeholder-posts-container">
-          <!--<c:forEach begin="1" end="10" var="index">
+      <div id="placeholder-posts-container">
+        <!--<c:forEach begin="1" end="10" var="index">
               <%@ include file="/WEB-INF/jsp/components/widgets/placeholderBlogpost.jsp" %>
             </c:forEach>-->
-        </div>
-        <div id="actual-posts-container">
-          <ng-container
-            *ngIf="postList && postList.length > 0; else noPostsFound"
-          >
-            <!-- Include the page selector -->
+      </div>
+      <div id="actual-posts-container">
+        <ng-container
+          *ngIf="postList && postList.length > 0; else noPostsFound"
+        >
+          <!-- Include the page selector -->
 
-            <div *ngFor="let post of postList">
-              <app-feed-post-preview [post]="post"></app-feed-post-preview>
-            </div>
+          <div *ngFor="let post of postList">
+            <app-feed-post-preview [post]="post"></app-feed-post-preview>
+          </div>
 
-            <app-paginator
-              [totalPages]="totalPages"
-              [currentPage]="currentPage"
-              [pageSize]="pageSize"
-              (pageChange)="onPageChange($event)"
-            ></app-paginator>
-          </ng-container>
-          <ng-template #noPostsFound>
-            <div class="no-posts-found">
-              <i
-                class="circle-icon fa-solid fa-magnifying-glass"
-                style="color: var(--text)"
-              ></i>
-              <span i18n>Posts not found</span>
-            </div>
-          </ng-template>
-          <!-- <c:choose>
+          <app-paginator
+            [totalPages]="totalPages"
+            [currentPage]="currentPage"
+            [pageSize]="pageSize"
+            (pageChange)="onPageChange($event)"
+          ></app-paginator>
+        </ng-container>
+        <ng-template #noPostsFound>
+          <div class="no-posts-found">
+            <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+            <span i18n>Posts not found</span>
+          </div>
+        </ng-template>
+        <!-- <c:choose>
               <c:when test="${empty postList}">
                 <div class="no-posts-found">
                   <i class="circle-icon fa-solid fa-magnifying-glass" style="color:var(&#45;&#45;text)"></i>
@@ -82,26 +76,24 @@
                 </c:if>
               </c:otherwise>
             </c:choose>-->
-        </div>
-        <script>
-          function showPostsAfterDelay() {
-            document.getElementById(
-              "placeholder-posts-container"
-            ).style.display = "none";
-            document.getElementById("actual-posts-container").style.display =
-              "block";
-          }
-
-          setTimeout(showPostsAfterDelay, 300);
-        </script>
       </div>
+      <script>
+        function showPostsAfterDelay() {
+          document.getElementById("placeholder-posts-container").style.display =
+            "none";
+          document.getElementById("actual-posts-container").style.display =
+            "block";
+        }
 
-      <div class="column-right">
-        <app-right-column></app-right-column>
-        <!--<%@ include file="/WEB-INF/jsp/components/displays/rightColumn.jsp" %>-->
-      </div>
+        setTimeout(showPostsAfterDelay, 300);
+      </script>
+    </div>
+
+    <div class="column-right">
+      <app-right-column></app-right-column>
+      <!--<%@ include file="/WEB-INF/jsp/components/displays/rightColumn.jsp" %>-->
     </div>
   </div>
-
-  <app-wave-footer></app-wave-footer>
 </div>
+
+<app-wave-footer></app-wave-footer>
