--- a/webapp/front/front/src/app/features/service-providers/service-providers-reviews-and-posts/service-providers-reviews-and-posts.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-reviews-and-posts/service-providers-reviews-and-posts.component.html
@@ -59,10 +59,7 @@
 
       <ng-template #noReviewsFound>
         <div class="no-posts-found">
-          <i
-            class="circle-icon fa-solid fa-magnifying-glass mb-3"
-            style="color: var(--text)"
-          ></i>
+          <i class="circle-icon fa-solid fa-magnifying-glass mb-3"></i>
           Reviews not found
         </div>
       </ng-template>
@@ -99,10 +96,7 @@
 
       <ng-template #noPostsFound>
         <div class="no-posts-found w-100">
-          <i
-            class="circle-icon fa-solid fa-magnifying-glass mb-3"
-            style="color: var(--text)"
-          ></i>
+          <i class="circle-icon fa-solid fa-magnifying-glass mb-3"></i>
           Posts not found
         </div>
       </ng-template>
