--- a/webapp/front/front/src/app/shared/components/navbar/navbar.component.html
+++ b/webapp/front/front/src/app/shared/components/navbar/navbar.component.html
@@ -88,6 +88,12 @@
               </div>
             </label>
           </div>
+          <!-- Language Toggle Button -->
+          <button (click)="onLanguageToggle()" class="language-toggle">
+            {{
+              currentLanguage === englishLanguageLink ? "Español" : "English"
+            }}
+          </button>
         </div>
       </div>
     </div>
