chore: initiata translation templating into components starting at Admin feature

--- a/webapp/front/front/src/app/app.component.html
+++ b/webapp/front/front/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-success-toast></app-success-toast>
 <app-confirmation-dialog></app-confirmation-dialog>
 
-<app-background-clouds></app-background-clouds>
-<app-navbar></app-navbar>
+<app-navbar *ngIf="shouldShowNavbar()"></app-navbar>
+<app-background-clouds *ngIf="shouldShowNavbar()"></app-background-clouds>
 
 <router-outlet></router-outlet>
