--- a/webapp/front/front/src/app/shared/components/background-clouds/background-clouds.component.html
+++ b/webapp/front/front/src/app/shared/components/background-clouds/background-clouds.component.html
@@ -11,14 +11,15 @@
       fill-rule="evenodd"
       clip-rule="evenodd"
       d="M76.493 99.851C79.621 99.851 82.705 100.038 85.735 100.403C98.136 75.843 123.595 59 152.988 59C174.343 59 193.621 67.891 207.324 82.172C219.651 75.564 233.74 71.816 248.705 71.816C297.145 71.816 336.413 111.084 336.413 159.524C336.413 165.136 335.886 170.625 334.879 175.944H0C0.216 133.882 34.38 99.851 76.493 99.851Z"
-      fill="#FDFCFB"
+      fill=""
+      style="fill: var(--cloud1)"
     />
     <g filter="url(#filter0_d_0_1)">
       <path
         fill-rule="evenodd"
         clip-rule="evenodd"
         d="M490.92 124.85C487.792 124.85 484.708 125.038 481.678 125.403C469.278 100.843 443.819 84 414.426 84C393.071 84 373.792 92.891 360.089 107.172C347.763 100.564 333.673 96.816 318.708 96.816C270.268 96.816 231 136.084 231 184.524C231 190.136 231.527 195.625 232.534 200.944H567.413C567.197 158.882 533.033 124.85 490.92 124.85Z"
-        fill="#FBFBFB"
+        style="fill: var(--cloud2)"
       />
     </g>
     <defs>
@@ -59,7 +60,67 @@
     </defs>
   </svg>
   <svg
-    style="position: absolute; top: 100%; left: 50%"
+    style="position: absolute; top: 20%; left: 50%"
+    width="1000"
+    height="217"
+    viewBox="0 0 618 217"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      fill-rule="evenodd"
+      clip-rule="evenodd"
+      d="M76.493 99.851C79.621 99.851 82.705 100.038 85.735 100.403C98.136 75.843 123.595 59 152.988 59C174.343 59 193.621 67.891 207.324 82.172C219.651 75.564 233.74 71.816 248.705 71.816C297.145 71.816 336.413 111.084 336.413 159.524C336.413 165.136 335.886 170.625 334.879 175.944H0C0.216 133.882 34.38 99.851 76.493 99.851Z"
+      style="fill: var(--cloud1)"
+    />
+    <g filter="url(#filter0_d_0_1)">
+      <path
+        fill-rule="evenodd"
+        clip-rule="evenodd"
+        d="M490.92 124.85C487.792 124.85 484.708 125.038 481.678 125.403C469.278 100.843 443.819 84 414.426 84C393.071 84 373.792 92.891 360.089 107.172C347.763 100.564 333.673 96.816 318.708 96.816C270.268 96.816 231 136.084 231 184.524C231 190.136 231.527 195.625 232.534 200.944H567.413C567.197 158.882 533.033 124.85 490.92 124.85Z"
+        style="fill: var(--cloud2)"
+      />
+    </g>
+    <defs>
+      <filter
+        id="filter0_d_0_1"
+        x="181"
+        y="0"
+        width="436.413"
+        height="216.944"
+        filterUnits="userSpaceOnUse"
+        color-interpolation-filters="sRGB"
+      >
+        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+        <feColorMatrix
+          in="SourceAlpha"
+          type="matrix"
+          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+          result="hardAlpha"
+        />
+        <feOffset dy="-34" />
+        <feGaussianBlur stdDeviation="25" />
+        <feColorMatrix
+          type="matrix"
+          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.121569 0"
+        />
+        <feBlend
+          mode="normal"
+          in2="BackgroundImageFix"
+          result="effect1_dropShadow_0_1"
+        />
+        <feBlend
+          mode="normal"
+          in="SourceGraphic"
+          in2="effect1_dropShadow_0_1"
+          result="shape"
+        />
+      </filter>
+    </defs>
+  </svg>
+
+  <svg
+    style="position: absolute; top: 30%; left: 0%"
     width="618"
     height="217"
     viewBox="0 0 618 217"
@@ -70,14 +131,119 @@
       fill-rule="evenodd"
       clip-rule="evenodd"
       d="M76.493 99.851C79.621 99.851 82.705 100.038 85.735 100.403C98.136 75.843 123.595 59 152.988 59C174.343 59 193.621 67.891 207.324 82.172C219.651 75.564 233.74 71.816 248.705 71.816C297.145 71.816 336.413 111.084 336.413 159.524C336.413 165.136 335.886 170.625 334.879 175.944H0C0.216 133.882 34.38 99.851 76.493 99.851Z"
-      fill="#FDFCFB"
+      style="fill: var(--cloud1)"
+    />
+
+    <defs>
+      <filter
+        id="filter0_d_0_1"
+        x="181"
+        y="0"
+        width="436.413"
+        height="216.944"
+        filterUnits="userSpaceOnUse"
+        color-interpolation-filters="sRGB"
+      >
+        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+        <feColorMatrix
+          in="SourceAlpha"
+          type="matrix"
+          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+          result="hardAlpha"
+        />
+        <feOffset dy="-34" />
+        <feGaussianBlur stdDeviation="25" />
+        <feColorMatrix
+          type="matrix"
+          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.121569 0"
+        />
+        <feBlend
+          mode="normal"
+          in2="BackgroundImageFix"
+          result="effect1_dropShadow_0_1"
+        />
+        <feBlend
+          mode="normal"
+          in="SourceGraphic"
+          in2="effect1_dropShadow_0_1"
+          result="shape"
+        />
+      </filter>
+    </defs>
+  </svg>
+
+  <svg
+    style="position: absolute; top: 78%; left: 85%"
+    width="618"
+    height="217"
+    viewBox="0 0 618 217"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      fill-rule="evenodd"
+      clip-rule="evenodd"
+      d="M76.493 99.851C79.621 99.851 82.705 100.038 85.735 100.403C98.136 75.843 123.595 59 152.988 59C174.343 59 193.621 67.891 207.324 82.172C219.651 75.564 233.74 71.816 248.705 71.816C297.145 71.816 336.413 111.084 336.413 159.524C336.413 165.136 335.886 170.625 334.879 175.944H0C0.216 133.882 34.38 99.851 76.493 99.851Z"
+      style="fill: var(--cloud1)"
+    />
+
+    <defs>
+      <filter
+        id="filter0_d_0_1"
+        x="181"
+        y="0"
+        width="436.413"
+        height="216.944"
+        filterUnits="userSpaceOnUse"
+        color-interpolation-filters="sRGB"
+      >
+        <feFlood flood-opacity="0" result="BackgroundImageFix" />
+        <feColorMatrix
+          in="SourceAlpha"
+          type="matrix"
+          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+          result="hardAlpha"
+        />
+        <feOffset dy="-34" />
+        <feGaussianBlur stdDeviation="25" />
+        <feColorMatrix
+          type="matrix"
+          values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.121569 0"
+        />
+        <feBlend
+          mode="normal"
+          in2="BackgroundImageFix"
+          result="effect1_dropShadow_0_1"
+        />
+        <feBlend
+          mode="normal"
+          in="SourceGraphic"
+          in2="effect1_dropShadow_0_1"
+          result="shape"
+        />
+      </filter>
+    </defs>
+  </svg>
+  <svg
+    style="position: absolute; top: 85%; left: 65%"
+    width="1000"
+    height="217"
+    viewBox="0 0 618 217"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      fill-rule="evenodd"
+      clip-rule="evenodd"
+      d="M76.493 99.851C79.621 99.851 82.705 100.038 85.735 100.403C98.136 75.843 123.595 59 152.988 59C174.343 59 193.621 67.891 207.324 82.172C219.651 75.564 233.74 71.816 248.705 71.816C297.145 71.816 336.413 111.084 336.413 159.524C336.413 165.136 335.886 170.625 334.879 175.944H0C0.216 133.882 34.38 99.851 76.493 99.851Z"
+      style="fill: var(--cloud1)"
     />
     <g filter="url(#filter0_d_0_1)">
       <path
         fill-rule="evenodd"
         clip-rule="evenodd"
         d="M490.92 124.85C487.792 124.85 484.708 125.038 481.678 125.403C469.278 100.843 443.819 84 414.426 84C393.071 84 373.792 92.891 360.089 107.172C347.763 100.564 333.673 96.816 318.708 96.816C270.268 96.816 231 136.084 231 184.524C231 190.136 231.527 195.625 232.534 200.944H567.413C567.197 158.882 533.033 124.85 490.92 124.85Z"
-        fill="#FBFBFB"
+        style="fill: var(--cloud2)"
       />
     </g>
     <defs>
