--- a/webapp/front/front/src/app/shared/components/navbar/navbar.component.css
+++ b/webapp/front/front/src/app/shared/components/navbar/navbar.component.css
@@ -40,8 +40,7 @@
 }
 
 .language-toggle {
-  background: none;
-  border: 1px solid var(--primary);
+  background: var(--background);
   color: var(--primary);
   padding: 5px 10px;
   cursor: pointer;
@@ -50,6 +49,5 @@
 }
 
 .language-toggle:hover {
-  background: var(--primary);
   color: white;
 }
