chore: stop refreshtoken from resending infinite requests

--- a/webapp/front/front/src/assets/styles/commons.css
+++ b/webapp/front/front/src/assets/styles/commons.css
@@ -75,7 +75,7 @@ body {
   --user-profile: #aed794;
   --stripe: #eef0f2;
 
-  --to-primary: #e3f1dc;
+  --to-primary: #e0ebdb;
   --to-lila: #e6e6f1;
   --to-profession: #e7eff6;
   --to-admin: #dee4f5;
