--- a/webapp/front/front/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
@@ -1,34 +1,20 @@
-<app-service-providers-control-bar></app-service-providers-control-bar>
-
 <!-- If workersList is empty, show "not found" -->
-<ng-container
-  *ngIf="workersList && workersList.length > 0; else noWorkersFound"
->
+<ng-container *ngIf="workersList && workersList.length > 0; else noWorkersFound">
   <!-- The main service widgets -->
   <div class="f-c-c-c w-100">
     <div class="w-100" *ngFor="let worker of workersList">
-      <app-service-providers-preview
-        [worker]="worker"
-      ></app-service-providers-preview>
+      <app-service-providers-preview [worker]="worker"></app-service-providers-preview>
     </div>
   </div>
 
   <!-- Another paginator at the bottom -->
-  <app-paginator
-    [currentPage]="currentPage"
-    [totalPages]="totalPages"
-    [theme]="'services'"
-    (pageChange)="onPageChange($event)"
-  >
+  <app-paginator [currentPage]="currentPage" [totalPages]="totalPages" [theme]="'services'"
+    (pageChange)="onPageChange($event)">
   </app-paginator>
 </ng-container>
 <!-- Template shown when there are no workers -->
 <ng-template #noWorkersFound>
-  <div
-    class="cool-static-container m-b-20"
-    style="word-wrap: break-word"
-    aria-hidden="true"
-  >
+  <div class="cool-static-container m-b-20" style="word-wrap: break-word" aria-hidden="true">
     <div class="no-posts-found">
       <i class="circle-icon fa-solid fa-magnifying-glass"></i>
       <span>We could not find service provider in you neighborhood yet!</span>
