--- a/webapp/front/front/src/app/features/user-profile/user-profile-widget/user-profile-widget.component.html
+++ b/webapp/front/front/src/app/features/user-profile/user-profile-widget/user-profile-widget.component.html
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-4 f-c-c-c pe-2">
       <div style="display: flex; justify-content: center; align-items: center;">
-        <img class="big-profile-picture" style="width: 40px; height: 40px;" [src]="profileImageSafeUrl"
-          alt="User profile image" />
+        <img class="big-profile-picture" style="width: 40px; height: 40px;"
+          [src]="profileImageSafeUrl || 'assets/images/default-profile.png'" alt="User profile image" />
       </div>
     </div>
     <div class="col-8 p-0">
