fix: minor fixes to tags

--- a/webapp/front/front/src/app/features/service-providers/service-providers-layout/service-providers-layout.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-layout/service-providers-layout.component.html
@@ -11,10 +11,7 @@
     <div class="column-right">
       <div class="f-c-c-c w100">
         <app-calendar-widget></app-calendar-widget>
-        <app-tags-filter-widget
-          mode="professions"
-          *ngIf="isServicesRoute"
-        ></app-tags-filter-widget>
+        <app-tags-filter-widget class="w-100" mode="professions" *ngIf="isServicesRoute"></app-tags-filter-widget>
       </div>
     </div>
   </div>
