--- a/webapp/front/front/src/app/shared/components/right-column/right-column.component.html
+++ b/webapp/front/front/src/app/shared/components/right-column/right-column.component.html
@@ -1,4 +1,4 @@
 <div class="column justify-content-center align-items-center" style="gap: 1em">
   <app-calendar-widget></app-calendar-widget>
-  <app-tags-filter-widget [mode]="'tags'"></app-tags-filter-widget>
+  <app-tags-filter-widget class="w-100" [mode]="'tags'"></app-tags-filter-widget>
 </div>
